# mctsr

./: .gitignore  README.md  pyproject.toml
mctsr/: main.py
mctsr/settings/: constants.py
mctsr/utils/: classes.py  funcs.py  prompts.py
