[tool.poetry]
name = "mctsr"
version = "0.1.0"
description = ""
authors = ["Walker Hughes <74113220+walkerhughes@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
numpy = "^2.1.2"
python-dotenv = "^1.0.1"
openai = "^1.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
